--- a/tmux.conf
+++ b/tmux.conf
@@ -1,12 +1,3 @@
-# use C-a, since it's on the home row and easier to hit than C-b
-set-option -g prefix C-n
-unbind-key C-n
-bind-key C-n send-prefix
-set -g base-index 1
-
-# Easy config reload
-bind-key R source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
-
 # vi is good
 setw -g mode-keys vi
 
@@ -89,7 +80,7 @@ setw -g monitor-activity on
 set -g visual-activity on
 
 # Enable native Mac OS X copy/paste
-set-option -g default-command "/bin/bash -c 'which reattach-to-user-namespace >/dev/null && exec reattach-to-user-namespace $SHELL -l || exec $SHELL -l'"
+# set-option -g default-command "/bin/bash -c 'which reattach-to-user-namespace >/dev/null && exec reattach-to-user-namespace $SHELL -l || exec $SHELL -l'"
 
 # Allow the arrow key to be used immediately after changing windows
 set-option -g repeat-time 0
