--- a/tmux.conf
+++ b/tmux.conf
@@ -24,6 +24,9 @@ bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
 
+bind-key o set -g status
+
+
 # smart pane switching with awareness of vim splits
 bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-h) || tmux select-pane -L"
 bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-j) || tmux select-pane -D"
@@ -43,26 +46,25 @@ set-window-option -g utf8 on
 bind-key a last-pane
 bind-key q display-panes
 bind-key c new-window
-bind-key t next-window
-bind-key T previous-window
 
 bind-key [ copy-mode
 bind-key ] paste-buffer
 
-# Setup 'v' to begin selection as in Vim
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+# # Setup 'v' to begin selection as in Vim
+# bind-key -t vi-copy v begin-selection
+# bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
-# Update default binding of `Enter` to also use copy-pipe
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+# # Update default binding of `Enter` to also use copy-pipe
+# unbind -t vi-copy Enter
+# bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
 # set-window-option display-panes-time 1500
 
 # Status Bar
 set-option -g status-interval 1
 set-option -g status-left ''
-set-option -g status-right '%l:%M%p'
+# set-option -g status-right '%l:%M%p'
+set-option -g status-right ''
 set-window-option -g window-status-current-fg magenta
 set-option -g status-fg default
 
