--- a/tmux.conf
+++ b/tmux.conf
@@ -87,3 +87,6 @@ set -g visual-activity on
 
 # Allow the arrow key to be used immediately after changing windows
 set-option -g repeat-time 0
+
+# Renumber windows after closing one
+set-option -g renumber-windows on
