--- a/tmux.conf
+++ b/tmux.conf
@@ -19,7 +19,7 @@ bind-key C-o rotate-window
 set-option -g status-interval 1
 set-option -g status-left ''
 set-option -g status-right '%l:%M%p'
-set-window-option -g window-status-current-fg magenta
+set-window-option -g window-status-current-fg blue
 set-option -g status-fg default
 
 # Status Bar solarized-dark (default)
