--- a/rakefile
+++ b/rakefile
@@ -6,6 +6,10 @@ task :link do
   system "ln -s ~/dotfiles/aliases ~/.aliases"
   system "ln -s ~/dotfiles/bashrc ~/.bashrc"
   system "ln -s ~/dotfiles/bash_profile ~/.bash_profile"
+
+
+  system "mkdir -p ~/.config/nvim/"
+  system "ln -s ~/dotfiles/init.vim ~/.config/nvim/init.vim"
 end
 
 task :unlink do
