--- a/tmux.conf
+++ b/tmux.conf
@@ -41,3 +41,5 @@ set-option -g repeat-time 0
 
 # Renumber windows after closing one
 set-option -g renumber-windows on
+
+set-option -g default-command "reattach-to-user-namespace"
