--- a/rakefile
+++ b/rakefile
@@ -6,6 +6,7 @@ task :link do
   system "ln -s ~/dotfiles/aliases ~/.aliases"
   system "ln -s ~/dotfiles/bashrc ~/.bashrc"
   system "ln -s ~/dotfiles/bash_profile ~/.bash_profile"
+  system "ln -s ~/dotfiles/bash_secrets ~/.bash_secrets"
 
 
   system "mkdir -p ~/.config/nvim/"
