--- a/rakefile
+++ b/rakefile
@@ -14,5 +14,6 @@ task :link do
 
   system "ln -sf ~/dotfiles/src/gitconfig-work ~/.gitconfig-work"
   system "ln -sf ~/dotfiles/src/gitconfig ~/.gitconfig"
+  system "ln -sf ~/dotfiles/src/gitignore ~/.gitignore"
 end
 
