--- a/src/tmux.conf
+++ b/src/tmux.conf
@@ -24,8 +24,8 @@ set-option -g status-fg default
 
 # Status Bar solarized-dark (default)
 set-option -g status-bg black
-set-option -g pane-active-border-fg black
-set-option -g pane-border-fg black
+set-option -g pane-active-border-fg colour223
+set-option -g pane-border-fg colour223
 
 # -# Status Bar solarized-light
 # -if-shell "[ \"$COLORFGBG\" = \"11;15\" ]" "set-option -g status-bg white"
