--- a/src/tmux.conf
+++ b/src/tmux.conf
@@ -18,6 +18,7 @@ set-option -g status-left ''
 set-option -g status-right '%l:%M%p'
 set-window-option -g window-status-current-fg blue
 set-option -g status-fg default
+bind-key s set-option -g status
 
 # Status Bar solarized-dark (default)
 set-option -g status-bg black
@@ -27,3 +28,10 @@ set-option -g pane-border-fg colour223
 setw -g monitor-activity on
 set -g visual-activity on
 set-option -g renumber-windows on
+
+# Use Alt-arrow keys without prefix key to switch panes
+bind -n M-Left  resize-pane -L 25
+bind -n M-Right resize-pane -R 25
+bind -n M-Up    resize-pane -U 25
+bind -n M-Down  resize-pane -D 25
+
