--- a/dots/tmux.conf
+++ b/dots/tmux.conf
@@ -1,5 +1,6 @@
 setw -g mode-keys vi
-set-option -g default-terminal screen-256color
+set -g default-terminal 'tmux-256color'
+set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
