--- a/dots/tmux.conf
+++ b/dots/tmux.conf
@@ -30,6 +30,10 @@ set-option -g status-bg black
 set-option -g pane-active-border-fg colour223
 set-option -g pane-border-fg colour223
 
+# Status Bar name tab by directory name
+set-option -g automatic-rename on
+set-option -g automatic-rename-format '#{b:pane_current_path}'
+
 setw -g monitor-activity on
 set -g visual-activity on
 set-option -g renumber-windows on
