--- a/dots/tmux.conf
+++ b/dots/tmux.conf
@@ -21,14 +21,14 @@ bind-key -T copy-mode-vi C-\ select-pane -l
 set-option -g status-interval 1
 set-option -g status-left ''
 set-option -g status-right '%l:%M%p'
-set-window-option -g window-status-current-fg blue
+set-window-option -g window-status-current-style fg=blue
 set-option -g status-fg default
 bind-key s set-option -g status
 
 # Status Bar solarized-dark (default)
 set-option -g status-bg black
-set-option -g pane-active-border-fg colour223
-set-option -g pane-border-fg colour223
+set-option -g pane-active-border-style fg=colour223
+set-option -g pane-border-style fg=colour223
 
 # Status Bar name tab by directory name
 set-option -g automatic-rename on
