--- a/dots/tmux.conf
+++ b/dots/tmux.conf
@@ -1,5 +1,5 @@
 setw -g mode-keys vi
-set -g default-terminal 'tmux-256color'
+set -g default-terminal 'xterm-256color”
 set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
 
 # Smart pane switching with awareness of Vim splits.
@@ -10,12 +10,10 @@ bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
 bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
 bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
 bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
-bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 bind-key -T copy-mode-vi C-h select-pane -L
 bind-key -T copy-mode-vi C-j select-pane -D
 bind-key -T copy-mode-vi C-k select-pane -U
 bind-key -T copy-mode-vi C-l select-pane -R
-bind-key -T copy-mode-vi C-\ select-pane -l
 
 # Status Bar
 set-option -g status-interval 1
