--- a/dots/tmux.conf
+++ b/dots/tmux.conf
@@ -1,6 +1,5 @@
 setw -g mode-keys vi
-set -g default-terminal 'xterm-256color”
-set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
+set -g default-terminal 'xterm-256color'
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
@@ -37,7 +36,6 @@ set -g visual-activity on
 set-option -g renumber-windows on
 
 bind-key enter next-layout
-# Use Alt-arrow keys without prefix key to switch panes
 bind -n M-Left  resize-pane -L 25
 bind -n M-Right resize-pane -R 25
 bind -n M-Up    resize-pane -U 25
