fix tmux colors

--- a/dots/tmux.conf
+++ b/dots/tmux.conf
@@ -22,10 +22,12 @@ set-window-option -g window-status-current-style fg=blue
 set-option -g status-fg default
 bind-key s set-option -g status
 
-# Status Bar solarized-dark (default)
-set-option -g status-bg black
-set-option -g pane-active-border-style fg=colour223
-set-option -g pane-border-style fg=colour223
+# set color for status bar
+set-option -g status-style bg=colour10,fg=yellow,dim
+# set window title list colors
+set-window-option -g window-status-style fg=black,bg=colour10,dim
+# active window title colors
+set-window-option -g window-status-current-style fg=black,bg=colour13,bright
 
 # Status Bar name tab by directory name
 set-option -g automatic-rename on
@@ -40,3 +42,4 @@ bind -n M-Left  resize-pane -L 25
 bind -n M-Right resize-pane -R 25
 bind -n M-Up    resize-pane -U 25
 bind -n M-Down  resize-pane -D 25
+
