restructure tmux conf

--- a/dots/.tmux.conf
+++ b/dots/.tmux.conf
@@ -1,5 +1,25 @@
 setw -g mode-keys vi
-set -g default-terminal 'xterm-256color'
+
+# Status Bar
+set-option -g status-interval 3
+set-option -g status-left ''
+set-option -g status-right ''
+bind-key s set-option -g status
+
+# Status Bar name tab by directory name
+set-option -g automatic-rename on
+set-option -g renumber-windows on
+setw -g monitor-activity on
+set -g visual-activity on
+set-option -g automatic-rename-format '#{b:pane_current_path}'
+setw -g window-status-current-format '⇒#{pane_current_command}⇐'
+setw -g window-status-format '#{pane_current_command}'
+
+bind-key enter next-layout
+bind -n M-Left  resize-pane -L 25
+bind -n M-Right resize-pane -R 25
+bind -n M-Up    resize-pane -U 25
+bind -n M-Down  resize-pane -D 25
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
@@ -13,33 +33,3 @@ bind-key -T copy-mode-vi C-h select-pane -L
 bind-key -T copy-mode-vi C-j select-pane -D
 bind-key -T copy-mode-vi C-k select-pane -U
 bind-key -T copy-mode-vi C-l select-pane -R
-
-# Status Bar
-set-option -g status-interval 1
-set-option -g status-left ''
-set-option -g status-right '%l:%M%p'
-set-window-option -g window-status-current-style fg=blue
-set-option -g status-fg default
-bind-key s set-option -g status
-
-# set color for status bar
-set-option -g status-style bg=colour10,fg=yellow,dim
-# set window title list colors
-set-window-option -g window-status-style fg=black,bg=colour10,dim
-# active window title colors
-set-window-option -g window-status-current-style fg=black,bg=colour13,bright
-
-# Status Bar name tab by directory name
-set-option -g automatic-rename on
-set-option -g automatic-rename-format '#{b:pane_current_path}'
-
-setw -g monitor-activity on
-set -g visual-activity on
-set-option -g renumber-windows on
-
-bind-key enter next-layout
-bind -n M-Left  resize-pane -L 25
-bind -n M-Right resize-pane -R 25
-bind -n M-Up    resize-pane -U 25
-bind -n M-Down  resize-pane -D 25
-
