--- a/dots/.tmux.conf
+++ b/dots/.tmux.conf
@@ -11,9 +11,10 @@ set-option -g automatic-rename on
 set-option -g renumber-windows on
 setw -g monitor-activity on
 set -g visual-activity on
+
 set-option -g automatic-rename-format '#{b:pane_current_path}'
-setw -g window-status-current-format '⇒#{pane_current_command}⇐'
-setw -g window-status-format '#{pane_current_command}'
+setw -g window-status-current-format '⇒#{b:pane_current_path}⇐'
+setw -g window-status-format '#{b:pane_current_path}'
 
 bind-key enter next-layout
 bind -n M-Left  resize-pane -L 25
