--- a/dots/.gitconfig
+++ b/dots/.gitconfig
@@ -9,7 +9,7 @@
 	defaultBranch = main
 
 [alias]
-	co = checkout
+	co = "!f() { echo 'Use switch and restore!'; }; f"
 	rpull = pull --rebase
 	touched = "!f() { git diff --name-only $(git merge-base HEAD master); }; f"
 	diffm = "!f() { git diff $(git merge-base HEAD master); }; f"
