--- a/dots/.tmux.conf
+++ b/dots/.tmux.conf
@@ -34,3 +34,7 @@ bind-key -T copy-mode-vi C-h select-pane -L
 bind-key -T copy-mode-vi C-j select-pane -D
 bind-key -T copy-mode-vi C-k select-pane -U
 bind-key -T copy-mode-vi C-l select-pane -R
+
+set-option -sg escape-time 10
+set-option -g focus-events on
+set-option -sa terminal-overrides ',xterm-256color:RGB'
