--- a/dots/.tmux.conf
+++ b/dots/.tmux.conf
@@ -1,10 +1,15 @@
 setw -g mode-keys vi
 
+
 # Status Bar
-set-option -g status-interval 3
+set-option -g status-interval 4
 set-option -g status-left ''
 set-option -g status-right ''
 bind-key s set-option -g status
+set-window-option -g window-status-current-style fg=magenta
+set-option -g status-style bg=black
+set-option -g pane-active-border-style fg=black
+set-option -g pane-border-style fg=black
 
 # Status Bar name tab by directory name
 set-option -g automatic-rename on
