--- a/dots/.npmrc
+++ b/dots/.npmrc
@@ -1,1 +1,4 @@
+//npm.pkg.github.com/:_authToken=${PERSONAL_ACCESS_TOKEN_GITHUB}
+@onomondo:registry=https://npm.pkg.github.com
+
 prefix = ~/.npm-packages
