--- a/dots/.config/ghostty/config
+++ b/dots/.config/ghostty/config
@@ -1,3 +1,17 @@
+# TODO: dynamic path here
 command = /opt/homebrew/bin/fish
+
+# TODO: find a new font
 # font-family = Menlo
 # font-thicken = true
+
+mouse-hide-while-typing = true
+
+# TODO: opacity in tmux / nvim?
+background-opacity = 0.9
+background-blur-radius = 100
+
+# macos-titlebar-style = hidden
+window-decoration = false
+macos-non-native-fullscreen = true
+auto-update = download
