--- a/dots/dot-tmux.conf
+++ b/dots/dot-tmux.conf
@@ -1,44 +1,25 @@
-setw -g mode-keys vi
-
-# Status Bar
-set-option -g status-interval 4
-set-option -g status-left ''
-set-option -g status-right ''
-bind-key s set-option -g status
-set-window-option -g window-status-current-style fg=magenta
-set-option -g status-style bg=black
-set-option -g pane-active-border-style fg=black
-set-option -g pane-border-style fg=black
-
-# Status Bar name tab by directory name
 set-option -g automatic-rename on
 set-option -g renumber-windows on
 setw -g monitor-activity on
 set -g visual-activity on
 
 set-option -g automatic-rename-format '#{b:pane_current_path}'
-setw -g window-status-current-format '⇒#{b:pane_current_path}⇐'
 setw -g window-status-format '#{b:pane_current_path}'
 
-bind-key enter next-layout
-bind -n M-Left  resize-pane -L 25
-bind -n M-Right resize-pane -R 25
-bind -n M-Up    resize-pane -U 25
-bind -n M-Down  resize-pane -D 25
+set-option -g pane-active-border-style fg=gray
+set-option -g pane-border-style fg=black
 
-# Smart pane switching with awareness of Vim splits.
-# See: https://github.com/christoomey/vim-tmux-navigator
-is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
-bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
-bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
-bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
-bind-key -T copy-mode-vi C-h select-pane -L
-bind-key -T copy-mode-vi C-j select-pane -D
-bind-key -T copy-mode-vi C-k select-pane -U
-bind-key -T copy-mode-vi C-l select-pane -R
+bind-key enter next-layout
+bind -n M-Left  resize-pane -L 0
+bind -n M-Right resize-pane -R 0
+bind -n M-Up    resize-pane -U 0
+bind -n M-Down  resize-pane -D 0
 
 set-option -sg escape-time 10
 set-option -g focus-events on
-set-option -sa terminal-overrides ',xterm-256color:RGB'
+
+set -g @plugin "nordtheme/tmux"
+set -g @plugin 'christoomey/vim-tmux-navigator'
+
+# must be at end of file, <prefix> + I to install plugins
+run '~/.config/tmux/plugins/tpm/tpm'
