--- a/dots/dot-tmux.conf
+++ b/dots/dot-tmux.conf
@@ -21,5 +21,7 @@ set-option -g focus-events on
 set -g @plugin "nordtheme/tmux"
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
-# must be at end of file, <prefix> + I to install plugins
+# must be after plugins, <prefix> + I to install
 run '~/.config/tmux/plugins/tpm/tpm'
+
+set -g status-right ""
