--- a/dots/dot-tmux.conf
+++ b/dots/dot-tmux.conf
@@ -18,8 +18,11 @@ bind -n M-Down  resize-pane -D 0
 set-option -sg escape-time 10
 set-option -g focus-events on
 
-set -g @plugin "nordtheme/tmux"
 set -g @plugin 'christoomey/vim-tmux-navigator'
+
+# set -g @plugin "nordtheme/tmux"
+set -g @plugin 'egel/tmux-gruvbox'
+set -g @tmux-gruvbox 'dark'
 
 # must be after plugins, <prefix> + I to install
 run '~/.config/tmux/plugins/tpm/tpm'
