--- a/dots/dot-tmux.conf
+++ b/dots/dot-tmux.conf
@@ -6,7 +6,7 @@ set -g visual-activity on
 set-option -g automatic-rename-format '#{b:pane_current_path}'
 setw -g window-status-format '#{b:pane_current_path}'
 
-set-option -g pane-active-border-style fg=gray
+set-option -g pane-active-border-style fg=grey
 set-option -g pane-border-style fg=black
 
 bind-key enter next-layout
