--- a/dots/dot-tmux.conf
+++ b/dots/dot-tmux.conf
@@ -24,6 +24,8 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'egel/tmux-gruvbox'
 set -g @tmux-gruvbox 'dark'
 
+# Installation:
+# git clone https://github.com/tmux-plugins/tpm ~/.config/tmux/plugins/tpm
 # must be after plugins, <prefix> + I to install
 run '~/.config/tmux/plugins/tpm/tpm'
 
