--- a/dots/dot-tmux.conf
+++ b/dots/dot-tmux.conf
@@ -15,6 +15,9 @@ bind -n M-Right resize-pane -R 20
 bind -n M-Up    resize-pane -U 20
 bind -n M-Down  resize-pane -D 20
 
+bind M-c attach-session -c "#{pane_current_path}"
+bind C new-window -c "#{pane_current_path}"
+
 set-option -sg escape-time 10
 set-option -g focus-events on
 
