--- a/dots/dot-tmux.conf
+++ b/dots/dot-tmux.conf
@@ -25,7 +25,12 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 
 # set -g @plugin "nordtheme/tmux"
 set -g @plugin 'egel/tmux-gruvbox'
-set -g @tmux-gruvbox 'dark'
+
+# Dynamic gruvbox theme - will be set by theme functions
+# Check for environment variable, fallback to system detection
+if-shell '[ -n "$TMUX_GRUVBOX_MODE" ]' \
+  'set -g @tmux-gruvbox "$TMUX_GRUVBOX_MODE"' \
+  'run-shell "if defaults read -g AppleInterfaceStyle 2>/dev/null | grep -q Dark; then tmux set -g @tmux-gruvbox dark; else tmux set -g @tmux-gruvbox light; fi"'
 
 # Installation:
 # git clone https://github.com/tmux-plugins/tpm ~/.config/tmux/plugins/tpm
