weird tmux thing

--- a/dots/dot-tmux.conf
+++ b/dots/dot-tmux.conf
@@ -25,7 +25,7 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 
 # set -g @plugin "nordtheme/tmux"
 set -g @plugin 'egel/tmux-gruvbox'
-tmux set -g @tmux-gruvbox dark
+set -g @tmux-gruvbox dark
 
 # Installation:
 # git clone https://github.com/tmux-plugins/tpm ~/.config/tmux/plugins/tpm
